@@ -1458,6 +1458,7 @@ public:
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, ps, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, ps*2, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, ps*3, ps));
+        exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, 0, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_PREWRITE, ps*3, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_PREWRITE, ps*2, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_TXN_BEGIN, 0, 0, 0));
@@ -1575,6 +1576,7 @@ public:
         exp.push_back(LogEntry(8, LOG_ENTRY_TYPE_WRITE, ps*3, ps));
         exp.push_back(LogEntry(8, LOG_ENTRY_TYPE_WRITE, ps*2, ps));
         exp.push_back(LogEntry(8, LOG_ENTRY_TYPE_WRITE, ps*1, ps));
+        exp.push_back(LogEntry(8, LOG_ENTRY_TYPE_WRITE, 0, ps));
         exp.push_back(LogEntry(8, LOG_ENTRY_TYPE_TXN_BEGIN, 0, 0));
         exp.push_back(LogEntry(7, LOG_ENTRY_TYPE_TXN_COMMIT, 0, 0, 0));
         exp.push_back(LogEntry(7, LOG_ENTRY_TYPE_WRITE, ps*2, ps));
@@ -1586,6 +1588,7 @@ public:
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, ps, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, ps*2, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, ps*3, ps));
+        exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_WRITE, 0, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_PREWRITE, ps*3, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_PREWRITE, ps*2, ps));
         exp.push_back(LogEntry(5, LOG_ENTRY_TYPE_TXN_BEGIN, 0, 0, 0));
